# flower

./: .gdbinit  .gitattributes  .gitignore  Jenkinsfile  Makefile  README.md  bochsrc.bxrc  run.sh  x86_64-unknown-flower-gnu.json
.github/ISSUE_TEMPLATE/: Bug_report.md  Enhancement.md  Feature_request.md
cfg/: grub.cfg  linker.ld
doc/: Boot-Errors.md
init/: Cargo.toml  Makefile  linker.ld
init/src/: lang.rs  lib.rs
init/src/asm/: start.asm
kernel/: Cargo.toml  Makefile  Xargo.toml  src.7z  x86_64-unknown-flower-gnu.json  x86_64-unknown-flower-none.json
kernel/src/: acpi_impl.rs  color.rs  cpuid.rs  flower.txt  flower_stem.txt  gdt.rs  io.rs  keyboard.rs  keymap.rs  lang.rs  lib.rs  log.rs  process.rs  ps2.rs  ps2_io.rs  snake.rs  terminal.rs  userspace.rs  util.rs  vga.rs
kernel/src/acpi/: mod.rs  rsdp.rs
kernel/src/acpi/sdt/: hpet.rs  madt.rs  mod.rs  rsdt.rs
kernel/src/asm/: boot.asm  multiboot_header.asm  syscall.asm
kernel/src/drivers/: mod.rs  pit.rs  ps2.rs  serial.rs  vga.rs
kernel/src/drivers/keyboard/: keymap.rs  mod.rs
kernel/src/drivers/ps2/: device.rs  io.rs  keyboard.rs  mod.rs  mouse.rs  port.rs  ps2.rs
kernel/src/drivers/terminal/: mod.rs  terminal.rs  text_area.rs
kernel/src/interrupts/: exceptions.rs  handlers.rs  irqs.rs  legacy_pic.rs  mod.rs  pic.rs  syscalls.rs
kernel/src/interrupts/syscalls/: mod.rs
kernel/src/memory/: bootstrap_allocator.rs  bootstrap_heap.rs  buddy_allocator.rs  heap.rs  mod.rs  paging.rs  physical_allocator.rs  physical_mapping.rs  stack_allocator.rs
kernel/src/memory/paging/: mod.rs  page_map.rs  remap.rs  userspace.rs
kernel/src/resources/art/: flower.txt  flower_stem.txt
kernel/src/resources/ascii_art/: flower_stem.txt
kernel/src/syscalls/: mod.rs
kernel/src/syscalls/test/: mod.rs
kernel/src/terminal/: mod.rs  text_area.rs
kernel/src/userspace/: jump.rs  mod.rs  process.rs
src/: grub.cfg  linker.ld
src/asm/src/: boot.asm
src/boot/: boot.asm  boot.s  multiboot_header.asm
src/rust/: Cargo.toml
src/rust/src/: lang.rs  lib.rs
tools/: gen_print_vga.py
