[package]
name = "flower_kernel"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>", "Gegy1000 <gegy1000@gmail.com"]

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.3"
spin = "0.4.6"
x86_64 = "0.1.2"
bitflags = "1.0.1"
multiboot2 = { git = "https://github.com/Restioson/multiboot2-elf64" }
bit_field = "0.9.0"
fast-math = { git = "https://github.com/Restioson/fast-math", branch = "no_std" }

[dependencies.array-init]
version = "0.0.3"
features = ["nightly"]

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[features]
default = []

debug = []
trace = ["debug"]