[package]
name = "flower_kernel"
version = "0.1.0"
authors = ["Restioson <restiosondev@gmail.com>", "Gegy1000 <gegy1000@gmail.com"]

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
opt-level = 3

[dependencies]
rlibc = "^1.0.0"
volatile = "^0.2.3"
spin = "^0.4.6"
x86_64 = "^0.1.2"
bitflags = "^1.0.1"
bit_field = "^0.9.0"
log = "^0.4.3"
static_assertions = "^0.2.5"

[dependencies.multiboot2]
git = "https://github.com/rust-osdev/multiboot2-elf64"

[dependencies.acpi]
git = "https://github.com/rust-osdev/acpi"

[dependencies.arrayvec]
version = "^0.4.7"
default-features = false

[dependencies.array-init]
version = "^0.0.3"
features = ["nightly"]

[dependencies.lazy_static]
version = "^1.0.0"
features = ["spin_no_std"]

[features]
default = []

debug = []
trace = ["debug"]
